# ros2-education-platform-submission

./: AGENTS.md  CLAUDE.md  README.md  TASK_TEMPLATE.md  WORKLIST.md
.github/workflows/: pages.yml
Pyscript/: README.md  index.html
Pyscript/code-flow/: index.html
Pyscript/config/: learning-catalog.json  runtime-config.js
Pyscript/launch/: index.html
Pyscript/learn/: index.html
Pyscript/src/: main.js  (+1 more)
ROS2-Workspace/: README.md  compose.yaml
ROS2-Workspace/ros2_ws/src/ros2_learning_demo/: package.xml  setup.cfg  setup.py
ROS2-Workspace/ros2_ws/src/ros2_learning_demo/launch/: backend_stack.launch.py  demo_nodes.launch.py  learning_demo.launch.py  source_only.launch.py
ROS2-Workspace/ros2_ws/src/ros2_learning_demo/resource/: ros2_learning_demo
ROS2-Workspace/ros2_ws/src/ros2_learning_demo/ros2_learning_demo/: __init__.py  arm_sim_node.py  concept_code_events.py  concept_code_session_manager.py  concept_code_templates.py  demo_registry.py  launch_api_server.py  launch_manager.py  learning_catalog.py  lesson_reflector_node.py  lesson_source_node.py  system_metadata.py  validate_concept_code_api.py  validate_launch_api.py
ROS2-Workspace/ros2_ws/src/ros2_learning_demo/test/: test_concept_code_sessions.py  test_launch_manager.py
Thesis Vault/: Claude Prompt.md  Codex Prompt.md  Example Claude Code Task Card.md  claude_output.txt
docs/: architecture.md  debugging-playbook.md  testing.md  ui-principles.md
scripts/: dev-ui.sh  dev-up.sh  repo-map.sh  smoke-ros.sh  smoke-ui.sh
worklists/: concept-code.md  launch.md  learn.md  system.md  topics.md
(+42 files in other folders)
